# telic-loop

./: .gitignore  AGENT_INSTRUCTIONS.md  CLAUDE.md  README.md  pyproject.toml  run_beep2b.py  run_e2e.py
.claude/: settings.local.json
.claude/skills/: telic-loop.md
docs/: FUTURE_IMPROVEMENTS.md  LOOP_FLOW.md  OUTER_LOOP_DESIGN.md  POST_MORTEM_V3.md  V3_ARCHITECTURE.md  V3_IMPLEMENTATION_PLAN.md  V3_PHASE1_PLAN.md  V3_PHASE2_PLAN.md  V3_PHASE3_PLAN.md  V3_PRD.md  V4_DESIGN_PRINCIPLES.md  ZEROCLAW_ANALYSIS.md
docs/research/: NAMING.md  emergent-system-coherence-synthesis.md  human-feedback-integration-synthesis.md  process-meta-reasoning-synthesis.md  vision-validation-synthesis.md
reference/v2/: README.md  loop.sh
skills/sprint-fix/: SKILL.md
skills/sprint-init/: SKILL.md
skills/sprint-reset/: SKILL.md
skills/sprint-run/: SKILL.md
skills/sprint-status/: SKILL.md
sprints/beep2b/: .gitignore  DELIVERY_REPORT.md  IMPLEMENTATION_PLAN.md  PRD.md  VALUE_CHECKLIST.md  VISION.md  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.mjs  tsconfig.json
sprints/beep2b-v4/: .dockerignore  ARCHITECTURE.md  DELIVERY_REPORT.md  IMPLEMENTATION_PLAN.md  KNOWN_ISSUES.md  PRD.md  README.md  VALUE_CHECKLIST.md  VISION.md  docker-compose.yml  homepage-test.html  test_stats_visibility.html
sprints/bookshelf/: DELIVERY_REPORT.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  VALUE_CHECKLIST.md  VISION.md  docker-compose.yml
sprints/epic-test/: PRD.md  VALUE_CHECKLIST.md  VISION.md  package-lock.json  package.json  server.js
(+708 files in other folders)
