[project]
name = "telic-loop"
version = "0.1.0"
description = "Vision-to-Value Delivery System: a closed-loop autonomous agent that turns a Vision and PRD into the outcome they promise."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "claude-code-sdk>=0.0.25",
    "dacite>=1.8.0",
]

[project.scripts]
telic-loop = "telic_loop.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telic_loop"]
